--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@ tailwind.config = {
 <script type="module">import {gsap} from "/vendor/cdn/gsap.min.js";import {ScrollTrigger} from "/vendor/cdn/ScrollTrigger.min.js";gsap.registerPlugin(ScrollTrigger);window.gsap=gsap;window.ScrollTrigger=ScrollTrigger;</script>
 <script type="module" src="db.js"></script>
 <script src="https://plausible.io/js/plausible.js" data-domain="example.com" defer></script>
+<script src="/vendor/cdn/fuse.min.js"></script>
+<script src="search.js" defer></script>
 <script type="module" src="/vendor/cdn/instantpage.mjs"></script>
 <script src="mini.js" defer></script>
 </body>
